// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Demo page clear and export buttons should be disabled when demo is loading 1`] = `
<Split
  className=""
  component="div"
  gutter="md"
  style={
    Object {
      "overflowY": "auto",
    }
  }
>
  <SplitItem
    className=""
    isFilled={false}
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <TextContent>
      <Text
        component="h1"
      >
        Demo
      </Text>
    </TextContent>
    <SearchBox
      addHandler={[Function]}
      boundingBox={null}
      countryCodeSearchFilter={
        Array [
          "XY",
        ]
      }
      searchDelay={500}
    />
    <LocationList
      depot={
        Object {
          "id": 1,
          "lat": 1.345678,
          "lng": 1.345678,
        }
      }
      removeHandler={[MockFunction]}
      selectHandler={[Function]}
      visits={
        Array [
          Object {
            "id": 2,
            "lat": 2.345678,
            "lng": 2.345678,
          },
          Object {
            "id": 3,
            "lat": 3.676111,
            "lng": 3.568333,
          },
        ]
      }
    />
  </SplitItem>
  <SplitItem
    className=""
    isFilled={true}
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Split
      className=""
      component="div"
      gutter="md"
    >
      <SplitItem
        className=""
        isFilled={true}
      >
        <Grid
          className=""
          gutter={null}
          lg={null}
          md={null}
          sm={null}
          span={null}
          xl={null}
        >
          <GridItem
            className=""
            lg={null}
            lgOffset={null}
            lgRowSpan={null}
            md={null}
            mdOffset={null}
            mdRowSpan={null}
            offset={null}
            rowSpan={null}
            sm={null}
            smOffset={null}
            smRowSpan={null}
            span={8}
            xl={null}
            xlOffset={null}
            xlRowSpan={null}
          >
            <Level
              className=""
              gutter="sm"
            >
              <LevelItem
                style={
                  Object {
                    "display": "flex",
                  }
                }
              >
                <Level
                  className=""
                  gutter="sm"
                >
                  <LevelItem>
                    <InputGroup
                      className=""
                    >
                      <Button
                        isDisabled={false}
                        onClick={[Function]}
                        variant="primary"
                      >
                        <MinusIcon
                          color="currentColor"
                          size="sm"
                          title={null}
                        />
                      </Button>
                      <InputGroupText
                        className=""
                        component="span"
                        readOnly={true}
                      >
                        8
                      </InputGroupText>
                      <Button
                        data-cy="demo-add-vehicle"
                        onClick={[Function]}
                        variant="primary"
                      >
                        <PlusIcon
                          color="currentColor"
                          size="sm"
                          title={null}
                        />
                      </Button>
                    </InputGroup>
                  </LevelItem>
                  <LevelItem>
                    vehicles
                  </LevelItem>
                </Level>
              </LevelItem>
              <LevelItem>
                2 visits
              </LevelItem>
              <LevelItem>
                Total travel time: 10
              </LevelItem>
            </Level>
          </GridItem>
          <GridItem
            className=""
            lg={null}
            lgOffset={null}
            lgRowSpan={null}
            md={null}
            mdOffset={null}
            mdRowSpan={null}
            offset={null}
            rowSpan={null}
            sm={null}
            smOffset={null}
            smRowSpan={null}
            span={4}
            xl={null}
            xlOffset={null}
            xlRowSpan={null}
          />
        </Grid>
      </SplitItem>
      <SplitItem
        className=""
        isFilled={false}
      >
        <Button
          id="export-button"
          isDisabled={true}
          onClick={[Function]}
          style={
            Object {
              "marginBottom": 16,
              "marginLeft": 16,
            }
          }
        >
          Export
        </Button>
        <Button
          data-cy="demo-clear-button"
          id="clear-button"
          isDisabled={true}
          onClick={[MockFunction]}
          style={
            Object {
              "marginBottom": 16,
              "marginLeft": 16,
            }
          }
        >
          Clear
        </Button>
      </SplitItem>
    </Split>
    <RouteMap
      boundingBox={null}
      clickHandler={[Function]}
      depot={
        Object {
          "id": 1,
          "lat": 1.345678,
          "lng": 1.345678,
        }
      }
      removeHandler={[MockFunction]}
      routes={
        Array [
          Object {
            "track": Array [],
            "vehicle": Object {
              "capacity": 5,
              "id": 1,
              "name": "v1",
            },
            "visits": Array [
              Object {
                "id": 1,
                "lat": 1.345678,
                "lng": 1.345678,
              },
              Object {
                "id": 2,
                "lat": 2.345678,
                "lng": 2.345678,
              },
              Object {
                "id": 3,
                "lat": 3.676111,
                "lng": 3.568333,
              },
            ],
          },
        ]
      }
      selectedId={NaN}
      updateViewport={[MockFunction]}
      userViewport={
        Object {
          "center": Array [
            0,
            0,
          ],
          "isDirty": false,
          "zoom": 1,
        }
      }
      visits={
        Array [
          Object {
            "id": 2,
            "lat": 2.345678,
            "lng": 2.345678,
          },
          Object {
            "id": 3,
            "lat": 3.676111,
            "lng": 3.568333,
          },
        ]
      }
    />
  </SplitItem>
</Split>
`;

exports[`Demo page clear button should replace demo dropdown as soon as there is a depot 1`] = `
<Split
  className=""
  component="div"
  gutter="md"
  style={
    Object {
      "overflowY": "auto",
    }
  }
>
  <SplitItem
    className=""
    isFilled={false}
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <TextContent>
      <Text
        component="h1"
      >
        Demo
      </Text>
    </TextContent>
    <SearchBox
      addHandler={[Function]}
      boundingBox={null}
      countryCodeSearchFilter={Array []}
      searchDelay={500}
    />
    <LocationList
      depot={
        Object {
          "description": "",
          "id": 1,
          "lat": 1,
          "lng": 1,
        }
      }
      removeHandler={[MockFunction]}
      selectHandler={[Function]}
      visits={Array []}
    />
  </SplitItem>
  <SplitItem
    className=""
    isFilled={true}
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Split
      className=""
      component="div"
      gutter="md"
    >
      <SplitItem
        className=""
        isFilled={true}
      >
        <Grid
          className=""
          gutter={null}
          lg={null}
          md={null}
          sm={null}
          span={null}
          xl={null}
        >
          <GridItem
            className=""
            lg={null}
            lgOffset={null}
            lgRowSpan={null}
            md={null}
            mdOffset={null}
            mdRowSpan={null}
            offset={null}
            rowSpan={null}
            sm={null}
            smOffset={null}
            smRowSpan={null}
            span={8}
            xl={null}
            xlOffset={null}
            xlRowSpan={null}
          >
            <Level
              className=""
              gutter="sm"
            >
              <LevelItem
                style={
                  Object {
                    "display": "flex",
                  }
                }
              >
                <Level
                  className=""
                  gutter="sm"
                >
                  <LevelItem>
                    <InputGroup
                      className=""
                    >
                      <Button
                        isDisabled={true}
                        onClick={[Function]}
                        variant="primary"
                      >
                        <MinusIcon
                          color="currentColor"
                          size="sm"
                          title={null}
                        />
                      </Button>
                      <InputGroupText
                        className=""
                        component="span"
                        readOnly={true}
                      >
                        0
                      </InputGroupText>
                      <Button
                        data-cy="demo-add-vehicle"
                        onClick={[Function]}
                        variant="primary"
                      >
                        <PlusIcon
                          color="currentColor"
                          size="sm"
                          title={null}
                        />
                      </Button>
                    </InputGroup>
                  </LevelItem>
                  <LevelItem>
                    vehicles
                  </LevelItem>
                </Level>
              </LevelItem>
              <LevelItem>
                0 visits
              </LevelItem>
              <LevelItem>
                Total travel time: 0
              </LevelItem>
            </Level>
          </GridItem>
          <GridItem
            className=""
            lg={null}
            lgOffset={null}
            lgRowSpan={null}
            md={null}
            mdOffset={null}
            mdRowSpan={null}
            offset={null}
            rowSpan={null}
            sm={null}
            smOffset={null}
            smRowSpan={null}
            span={4}
            xl={null}
            xlOffset={null}
            xlRowSpan={null}
          />
        </Grid>
      </SplitItem>
      <SplitItem
        className=""
        isFilled={false}
      >
        <Button
          id="export-button"
          isDisabled={false}
          onClick={[Function]}
          style={
            Object {
              "marginBottom": 16,
              "marginLeft": 16,
            }
          }
        >
          Export
        </Button>
        <Button
          data-cy="demo-clear-button"
          id="clear-button"
          isDisabled={false}
          onClick={[MockFunction]}
          style={
            Object {
              "marginBottom": 16,
              "marginLeft": 16,
            }
          }
        >
          Clear
        </Button>
      </SplitItem>
    </Split>
    <RouteMap
      boundingBox={null}
      clickHandler={[Function]}
      depot={
        Object {
          "description": "",
          "id": 1,
          "lat": 1,
          "lng": 1,
        }
      }
      removeHandler={[MockFunction]}
      routes={Array []}
      selectedId={NaN}
      updateViewport={[MockFunction]}
      userViewport={
        Object {
          "center": Array [
            0,
            0,
          ],
          "isDirty": false,
          "zoom": 1,
        }
      }
      visits={Array []}
    />
  </SplitItem>
</Split>
`;

exports[`Demo page should render correctly with a few routes 1`] = `
<Split
  className=""
  component="div"
  gutter="md"
  style={
    Object {
      "overflowY": "auto",
    }
  }
>
  <SplitItem
    className=""
    isFilled={false}
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <TextContent>
      <Text
        component="h1"
      >
        Demo
      </Text>
    </TextContent>
    <SearchBox
      addHandler={[Function]}
      boundingBox={null}
      countryCodeSearchFilter={
        Array [
          "XY",
        ]
      }
      searchDelay={500}
    />
    <LocationList
      depot={
        Object {
          "id": 1,
          "lat": 1.345678,
          "lng": 1.345678,
        }
      }
      removeHandler={[MockFunction]}
      selectHandler={[Function]}
      visits={
        Array [
          Object {
            "id": 2,
            "lat": 2.345678,
            "lng": 2.345678,
          },
          Object {
            "id": 3,
            "lat": 3.676111,
            "lng": 3.568333,
          },
        ]
      }
    />
  </SplitItem>
  <SplitItem
    className=""
    isFilled={true}
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Split
      className=""
      component="div"
      gutter="md"
    >
      <SplitItem
        className=""
        isFilled={true}
      >
        <Grid
          className=""
          gutter={null}
          lg={null}
          md={null}
          sm={null}
          span={null}
          xl={null}
        >
          <GridItem
            className=""
            lg={null}
            lgOffset={null}
            lgRowSpan={null}
            md={null}
            mdOffset={null}
            mdRowSpan={null}
            offset={null}
            rowSpan={null}
            sm={null}
            smOffset={null}
            smRowSpan={null}
            span={8}
            xl={null}
            xlOffset={null}
            xlRowSpan={null}
          >
            <Level
              className=""
              gutter="sm"
            >
              <LevelItem
                style={
                  Object {
                    "display": "flex",
                  }
                }
              >
                <Level
                  className=""
                  gutter="sm"
                >
                  <LevelItem>
                    <InputGroup
                      className=""
                    >
                      <Button
                        isDisabled={false}
                        onClick={[Function]}
                        variant="primary"
                      >
                        <MinusIcon
                          color="currentColor"
                          size="sm"
                          title={null}
                        />
                      </Button>
                      <InputGroupText
                        className=""
                        component="span"
                        readOnly={true}
                      >
                        8
                      </InputGroupText>
                      <Button
                        data-cy="demo-add-vehicle"
                        onClick={[Function]}
                        variant="primary"
                      >
                        <PlusIcon
                          color="currentColor"
                          size="sm"
                          title={null}
                        />
                      </Button>
                    </InputGroup>
                  </LevelItem>
                  <LevelItem>
                    vehicles
                  </LevelItem>
                </Level>
              </LevelItem>
              <LevelItem>
                2 visits
              </LevelItem>
              <LevelItem>
                Total travel time: 10
              </LevelItem>
            </Level>
          </GridItem>
          <GridItem
            className=""
            lg={null}
            lgOffset={null}
            lgRowSpan={null}
            md={null}
            mdOffset={null}
            mdRowSpan={null}
            offset={null}
            rowSpan={null}
            sm={null}
            smOffset={null}
            smRowSpan={null}
            span={4}
            xl={null}
            xlOffset={null}
            xlRowSpan={null}
          />
        </Grid>
      </SplitItem>
      <SplitItem
        className=""
        isFilled={false}
      >
        <Button
          id="export-button"
          isDisabled={false}
          onClick={[Function]}
          style={
            Object {
              "marginBottom": 16,
              "marginLeft": 16,
            }
          }
        >
          Export
        </Button>
        <Button
          data-cy="demo-clear-button"
          id="clear-button"
          isDisabled={false}
          onClick={[MockFunction]}
          style={
            Object {
              "marginBottom": 16,
              "marginLeft": 16,
            }
          }
        >
          Clear
        </Button>
      </SplitItem>
    </Split>
    <RouteMap
      boundingBox={null}
      clickHandler={[Function]}
      depot={
        Object {
          "id": 1,
          "lat": 1.345678,
          "lng": 1.345678,
        }
      }
      removeHandler={[MockFunction]}
      routes={
        Array [
          Object {
            "track": Array [],
            "vehicle": Object {
              "capacity": 5,
              "id": 1,
              "name": "v1",
            },
            "visits": Array [
              Object {
                "id": 1,
                "lat": 1.345678,
                "lng": 1.345678,
              },
              Object {
                "id": 2,
                "lat": 2.345678,
                "lng": 2.345678,
              },
              Object {
                "id": 3,
                "lat": 3.676111,
                "lng": 3.568333,
              },
            ],
          },
        ]
      }
      selectedId={NaN}
      updateViewport={[MockFunction]}
      userViewport={
        Object {
          "center": Array [
            0,
            0,
          ],
          "isDirty": false,
          "zoom": 1,
        }
      }
      visits={
        Array [
          Object {
            "id": 2,
            "lat": 2.345678,
            "lng": 2.345678,
          },
          Object {
            "id": 3,
            "lat": 3.676111,
            "lng": 3.568333,
          },
        ]
      }
    />
  </SplitItem>
</Split>
`;

exports[`Demo page should render correctly with no routes 1`] = `
<Split
  className=""
  component="div"
  gutter="md"
  style={
    Object {
      "overflowY": "auto",
    }
  }
>
  <SplitItem
    className=""
    isFilled={false}
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <TextContent>
      <Text
        component="h1"
      >
        Demo
      </Text>
    </TextContent>
    <SearchBox
      addHandler={[Function]}
      boundingBox={null}
      countryCodeSearchFilter={Array []}
      searchDelay={500}
    />
    <LocationList
      depot={null}
      removeHandler={[MockFunction]}
      selectHandler={[Function]}
      visits={Array []}
    />
  </SplitItem>
  <SplitItem
    className=""
    isFilled={true}
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <Split
      className=""
      component="div"
      gutter="md"
    >
      <SplitItem
        className=""
        isFilled={true}
      >
        <Grid
          className=""
          gutter={null}
          lg={null}
          md={null}
          sm={null}
          span={null}
          xl={null}
        >
          <GridItem
            className=""
            lg={null}
            lgOffset={null}
            lgRowSpan={null}
            md={null}
            mdOffset={null}
            mdRowSpan={null}
            offset={null}
            rowSpan={null}
            sm={null}
            smOffset={null}
            smRowSpan={null}
            span={8}
            xl={null}
            xlOffset={null}
            xlRowSpan={null}
          >
            <Level
              className=""
              gutter="sm"
            >
              <LevelItem
                style={
                  Object {
                    "display": "flex",
                  }
                }
              >
                <Level
                  className=""
                  gutter="sm"
                >
                  <LevelItem>
                    <InputGroup
                      className=""
                    >
                      <Button
                        isDisabled={true}
                        onClick={[Function]}
                        variant="primary"
                      >
                        <MinusIcon
                          color="currentColor"
                          size="sm"
                          title={null}
                        />
                      </Button>
                      <InputGroupText
                        className=""
                        component="span"
                        readOnly={true}
                      >
                        0
                      </InputGroupText>
                      <Button
                        data-cy="demo-add-vehicle"
                        onClick={[Function]}
                        variant="primary"
                      >
                        <PlusIcon
                          color="currentColor"
                          size="sm"
                          title={null}
                        />
                      </Button>
                    </InputGroup>
                  </LevelItem>
                  <LevelItem>
                    vehicles
                  </LevelItem>
                </Level>
              </LevelItem>
              <LevelItem>
                0 visits
              </LevelItem>
              <LevelItem>
                Total travel time: 0
              </LevelItem>
            </Level>
          </GridItem>
          <GridItem
            className=""
            lg={null}
            lgOffset={null}
            lgRowSpan={null}
            md={null}
            mdOffset={null}
            mdRowSpan={null}
            offset={null}
            rowSpan={null}
            sm={null}
            smOffset={null}
            smRowSpan={null}
            span={4}
            xl={null}
            xlOffset={null}
            xlRowSpan={null}
          />
        </Grid>
      </SplitItem>
      <SplitItem
        className=""
        isFilled={false}
      >
        <Button
          id="export-button"
          isDisabled={true}
          onClick={[Function]}
          style={
            Object {
              "marginBottom": 16,
              "marginLeft": 16,
            }
          }
        >
          Export
        </Button>
        <DemoDropdown
          demos={
            Array [
              "demo",
            ]
          }
          onSelect={[Function]}
        />
      </SplitItem>
    </Split>
    <RouteMap
      boundingBox={null}
      clickHandler={[Function]}
      depot={null}
      removeHandler={[MockFunction]}
      routes={Array []}
      selectedId={NaN}
      updateViewport={[MockFunction]}
      userViewport={
        Object {
          "center": Array [
            0,
            0,
          ],
          "isDirty": false,
          "zoom": 1,
        }
      }
      visits={Array []}
    />
  </SplitItem>
</Split>
`;
